# fifa-worldcup-predictor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh  system_design.md
.claude/: CLAUDE.md
config/: fixtures.py  settings.py  team_profiles.py  teams.json
data/snapshots/: 2026-06-10_v1.0-boosted.json  2026-06-11_v1.0-boosted.json
db/: database.py  schema.sql
evaluation/: accuracy.py  brier_score.py  evaluator.py
features/: elo.py  feature_matrix.py  group_status.py  momentum.py  squad_fitness.py  squad_strength.py
models/: ensemble.py  lgbm_model.py  poisson_model.py  simulator.py  trainer.py  xgb_model.py
pipeline/: api_football.py  claude_news.py  fbref_scraper.py  ingestion_runner.py  transfermarkt_scraper.py
predictions/: bracket_predictor.py  daily_predictor.py  snapshot_writer.py
scripts/: backfill_elo.py  generate_predictions.py  init_db.py  lookup_team_ids.py  predict_all_fixtures.py  run_evaluation.py  seed_fixtures.py  simulate_bracket.py  train_models.py
tests/: conftest.py
tests/test_features/: test_elo.py
tests/test_models/: test_ensemble.py
tests/test_pipeline/: test_api_football.py
tests/test_predictions/: test_daily_predictor.py
ui/: app.py  data_loader.py
ui/components/: bracket_tree.py  match_card.py  metric_widgets.py
ui/page_modules/: analytics.py  bracket_view.py  match_center.py  participants.py
ui/pages/: analytics.py  bracket_view.py  match_center.py
