[project]
name = "fifa-worldcup-predictor"
version = "1.0.0"
description = "FIFA World Cup 2026 match outcome and bracket predictor"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["config", "db", "pipeline", "features", "models", "predictions", "evaluation", "ui"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
